force-app/main/default/objects/Truck__c/Truck__c.object-meta.xml
<CustomObject>
    <label>Truck</label>
    <nameField>
        <label>Plate #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trucks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>