force-app/main/default/objects/Truck__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Location</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Trucks (Current Location)</relationshipLabel>
    <relationshipName>Trucks1</relationshipName>
    <type>Lookup</type>
</CustomField>