force-app/main/default/objects/Truck__c/fields/Truck_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Truck_Capacity__c</fullName>
    <label>Truck Capacity (pots)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>