force-app/main/default/objects/Truck__c/fields/Warehouse_Origin__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Origin</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Trucks</relationshipLabel>
    <relationshipName>Trucks</relationshipName>
    <type>Lookup</type>
</CustomField>