force-app/main/default/objects/Truck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Truck_Capacity__c</columns>
    <columns>Driver__c</columns>
    <columns>Warehouse_Origin__c</columns>
    <columns>Current_Location__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>